@@ -1,7 +1,7 @@
 <!-- Header -->
-<{includeq file='db:wglinks_admin_header.tpl'}>
+<{include file='db:wglinks_admin_header.tpl'}>
 
 <!-- About Page -->
 <div class="top"><{$about|default:false}></div>
 <!-- Footer -->
-<{includeq file='db:wglinks_admin_footer.tpl'}>
+<{include file='db:wglinks_admin_footer.tpl'}>
