@@ -1,4 +1,4 @@
-<div class="center"><a href="http://www.xoops.org/" title="Visit XOOPS" target="_blank"><img src="<{xoModuleIcons32 xoopsmicrobutton.gif}>" alt="XOOPS" />
+<div class="center"><a href="http://www.xoops.org/" title="Visit XOOPS" target="_blank"><img src="<{xoModuleIcons32 'xoopsmicrobutton.gif'}>" alt="XOOPS" />
 </a>
 </div>
 <div class="center smallsmall italic pad5"><strong>wgLinks</strong><{$smarty.const._AM_WGLINKS_MAINTAINEDBY}>
