@@ -1,5 +1,5 @@
 <ul class="breadcrumb">
-    <li><a href='<{xoAppUrl index.php}>' title='home'><i class="glyphicon glyphicon-home"></i></a></li>
+    <li><a href='<{xoAppUrl 'index.php'}>' title='home'><i class="glyphicon glyphicon-home"></i></a></li>
     <{foreach item=itm from=$xoBreadcrumbs name=bcloop}>
         <{if $itm.link|default:false}>
             <li><a href='<{$itm.link}>' title='<{$itm.title}>'><{$itm.title}></a></li>
