@@ -1,3 +1,3 @@
 <{if $show_breadcrumbs|default:false}>
-    <{includeq file='db:wglinks_breadcrumb.tpl'}>
+    <{include file='db:wglinks_breadcrumb.tpl'}>
 <{/if}>
