@@ -3,7 +3,7 @@
         <div class='row'>
         <div class='col-xs-12 col-sm-6 right'>
             <a href="<{$link.url}>" title="<{$link.tooltip|default:''}>" target="_blank">
-                <img src="<{$wglinks_upload_url}>/images/links/<{$link.logo}>" alt="<{$link.name}>" class="wglinks-img" style="height:<{$imgheight|default:200}>px">
+                <img src="<{$wglinks_upload_url}>/images/links/large/<{$link.logo}>" alt="<{$link.name}>" class="wglinks-img" style="height:<{$imgheight|default:200}>px">
             </a>
         </div>
         <div class='col-xs-12 col-sm-6 left'>
